--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "jest": "^24.6.0"
+    "jest": "^24.6.0",
+    "jest-cli": "^24.7.1"
   },
   "scripts": {
     "test": "jest"
