--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "async": "^2.6.2",
+    "global": "^4.3.2"
+  },
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "jest": "^24.6.0",
-    "jest-cli": "^24.7.1"
+    "jest": "^24.6.0"
   },
   "scripts": {
     "test": "jest"
