add updateCustomer mutation

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,14 @@
     "semi": [
       "error",
       "never"
+    ],
+    "keyword-spacing": [
+      "error",
+      { "overrides": {
+        "if": { "after": false },
+        "for": { "after": false },
+        "while": { "after": false }
+      } }
     ]
   }
 }
