add skeleton for hw (#5)
* add skeleton for hw

* add some relational

* add last complex type

* add folders structure

* add required fields for cart schema

* add order type

* add  order[] for cart

* del unused variable

* add createCustomer mutation

* add updateCustomer mutation

* begin refactoring hw 10

* fix some problems

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,18 @@
         "vars": "local",
         "args": "none"
       }
+    ],
+    "semi": [
+      "error",
+      "never"
+    ],
+    "keyword-spacing": [
+      "error",
+      { "overrides": {
+        "if": { "after": false },
+        "for": { "after": false },
+        "while": { "after": false }
+      } }
     ]
   }
 }
